--- a/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
+++ b/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
@@ -40,7 +40,7 @@
                 <div class="form-group" data-name="max_rn">
                     <label class="form-label control-label form-control-static">最多引用数</label>
                     <div>
-                        <input class="form-field form-control" type="number" name="max_rn" placeholder="" step="1" min="1" max="50"/>
+                        <input class="form-field form-control" type="number" name="max_rn" placeholder="" step="1" min="1" max="100"/>
                         <div class="help-block text-error form-control-static"></div>
                         <div class="help-block text-muted form-control-static"></div>
                     </div>
@@ -48,7 +48,7 @@
                 <div class="form-group" data-name="max_tk">
                     <label class="form-label control-label form-control-static">限定 Token</label>
                     <div>
-                        <input class="form-field form-control" type="number" name="max_tk" placeholder="" step="10" min="0" max="500"/>
+                        <input class="form-field form-control" type="number" name="max_tk" placeholder="" step="1" min="0"/>
                         <div class="help-block text-error form-control-static"></div>
                         <div class="help-block text-muted form-control-static"></div>
                     </div>
