--- a/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
+++ b/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
@@ -48,23 +48,23 @@
                 <div class="form-group" data-name="system">
                     <label class="form-label control-label form-control-static">系统人设</label>
                     <div>
-                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-soul" name="system" placeholder=""></textarea>
+                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-system" name="system" placeholder=""></textarea>
                         <div class="help-block text-error form-control-static"></div>
                         <div class="help-block text-muted form-control-static">使用 ${document} 嵌入引用材料</div>
                     </div>
                 </div>
-                <div class="form-group" data-name="system">
+                <div class="form-group" data-name="intent">
                     <label class="form-label control-label form-control-static">意图识别</label>
                     <div>
-                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-soul" name="intent" placeholder=""></textarea>
+                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-intent" name="intent" placeholder=""></textarea>
                         <div class="help-block text-error form-control-static"></div>
                         <div class="help-block text-muted form-control-static">填写意图分类描述</div>
                     </div>
                 </div>
-                <div class="form-group" data-name="system">
+                <div class="form-group" data-name="handle">
                     <label class="form-label control-label form-control-static">意图应用</label>
                     <div>
-                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-soul" name="handle" placeholder=""></textarea>
+                        <input class="form-field form-control" id="centra-data-magpie-assistant-form-handle" name="handle" placeholder=""/>
                         <div class="help-block text-error form-control-static"></div>
                         <div class="help-block text-muted form-control-static">填写应用 class</div>
                     </div>
@@ -100,6 +100,8 @@
                     <div>
                         <div class="btn-toolbar">
                             <button name="submit" type="button" class="btn btn-primary">发送消息</button>
+                            &nbsp; &nbsp;
+                            <button name="cleans" type="button" class="btn btn-link">清空</button> 
                         </div>
                     </div>
                 </div>
