完善流处理, 完善异常处理

--- a/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
+++ b/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
@@ -99,9 +99,11 @@
                 <div class="form-group">
                     <div>
                         <div class="btn-toolbar">
-                            <button name="submit" type="button" class="btn btn-primary">发送消息</button>
+                            <button name="submit" type="button" class="btn btn-primary">发送</button>
                             &nbsp; &nbsp;
-                            <button name="cleans" type="button" class="btn btn-link">清空</button> 
+                            <button name="cancel" type="button" class="btn btn-warning">停止</button>
+                            &nbsp; &nbsp;
+                            <button name="cleans" type="button" class="btn btn-link pull-right">清空</button> 
                         </div>
                     </div>
                 </div>
