完善异步控制, 完善代码

--- a/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
+++ b/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
@@ -50,15 +50,15 @@
                     <div>
                         <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-system" name="system" placeholder=""></textarea>
                         <div class="help-block text-error form-control-static"></div>
-                        <div class="help-block text-muted form-control-static">使用 ${document} 嵌入引用材料</div>
+                        <div class="help-block text-muted form-control-static">使用 ${documents} 嵌入引用材料</div>
                     </div>
                 </div>
-                <div class="form-group" data-name="intent">
-                    <label class="form-label control-label form-control-static">意图识别</label>
+                <div class="form-group row" data-name="remind">
+                    <label class="form-label control-label form-control-static">回顾设定</label>
                     <div>
-                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-intent" name="intent" placeholder=""></textarea>
+                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-remind" name="remind" placeholder=""></textarea>
                         <div class="help-block text-error form-control-static"></div>
-                        <div class="help-block text-muted form-control-static">填写意图分类描述</div>
+                        <div class="help-block text-muted form-control-static">使用 ${messages} 嵌入对话历史, 使用 ${prompt} 嵌入最新问题</div>
                     </div>
                 </div>
                 <div class="form-group" data-name="handle">
