--- a/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
+++ b/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
@@ -28,14 +28,6 @@
                         <div class="help-block text-muted form-control-static"></div>
                     </div>
                 </div>
-                <div class="form-group" data-name="min_up">
-                    <label class="form-label control-label form-control-static">最低匹配度</label>
-                    <div>
-                        <input class="form-field form-control" type="number" name="min_up" placeholder="" step="0.1" min="0.1" max="1.0"/>
-                        <div class="help-block text-error form-control-static"></div>
-                        <div class="help-block text-muted form-control-static"></div>
-                    </div>
-                </div>
                 <div class="form-group" data-name="max_rn">
                     <label class="form-label control-label form-control-static">最多引用数</label>
                     <div>
@@ -44,10 +36,18 @@
                         <div class="help-block text-muted form-control-static"></div>
                     </div>
                 </div>
-                <div class="form-group" data-name="max_tk">
-                    <label class="form-label control-label form-control-static">限定 Token</label>
+                <div class="form-group" data-name="min_up">
+                    <label class="form-label control-label form-control-static">最低匹配度</label>
                     <div>
-                        <input class="form-field form-control" type="number" name="max_tk" placeholder="" step="10" min="0" max="500"/>
+                        <input class="form-field form-control" type="number" name="min_up" placeholder="" step="0.1" min="0.0" max="1.0"/>
+                        <div class="help-block text-error form-control-static"></div>
+                        <div class="help-block text-muted form-control-static"></div>
+                    </div>
+                </div>
+                <div class="form-group" data-name="temperature">
+                    <label class="form-label control-label form-control-static">Temperature</label>
+                    <div>
+                        <input class="form-field form-control" type="number" name="temperature" placeholder="" step="0.1" min="0.0" max="1.0"/>
                         <div class="help-block text-error form-control-static"></div>
                         <div class="help-block text-muted form-control-static"></div>
                     </div>
