--- a/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
+++ b/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
@@ -25,7 +25,16 @@
                     <div>
                         <input class="form-field form-control" type="text" name="query" placeholder=""/>
                         <div class="help-block text-error form-control-static"></div>
-                        <div class="help-block text-muted form-control-static"></div>
+                        <div class="help-block text-muted form-control-static">格式: ?键=值&键=值 或 键:值,键:值 或直接写 JSON</div>
+                    </div>
+                </div>
+                <div class="form-group" data-name="imbed">
+                    <label class="form-label control-label form-control-static">直接引用</label>
+                    <div>
+                        <select class="form-field form-control" name="imbed">
+                        </select>
+                        <div class="help-block text-error form-control-static"></div>
+                        <div class="help-block text-muted form-control-static">跳过文档匹配, 直接嵌入引用</div>
                     </div>
                 </div>
                 <div class="form-group" data-name="max_rn">
