--- a/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
+++ b/hongs-magpie-web/web/centra/data/magpie/assistant/test.html
@@ -66,23 +66,7 @@
                     <div>
                         <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-system" name="system" placeholder=""></textarea>
                         <div class="help-block text-error form-control-static"></div>
-                        <div class="help-block text-muted form-control-static">扮演何种角色</div>
-                    </div>
-                </div>
-                <div class="form-group" data-name="relate">
-                    <label class="form-label control-label form-control-static">引用人设</label>
-                    <div>
-                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-relate" name="relate" placeholder=""></textarea>
-                        <div class="help-block text-error form-control-static"></div>
-                        <div class="help-block text-muted form-control-static">处理资料引用, 使用 ${sections} 嵌入引用材料</div>
-                    </div>
-                </div>
-                <div class="form-group" data-name="remind">
-                    <label class="form-label control-label form-control-static">回顾人设</label>
-                    <div>
-                        <textarea class="form-field form-control" id="centra-data-magpie-assistant-form-remind" name="remind" placeholder=""></textarea>
-                        <div class="help-block text-error form-control-static"></div>
-                        <div class="help-block text-muted form-control-static">总结历史消息, 使用 ${messages} 嵌入对话历史, 使用 ${prompt} 嵌入最新问题</div>
+                        <div class="help-block text-muted form-control-static">使用 ${sections|无} 嵌入引用材料</div>
                     </div>
                 </div>
             </div><!-- end form-body -->
@@ -96,15 +80,16 @@
             </div><!-- end panel -->
             <div class="panel panel-default">
             <div class="form-foot">
+                <form onsubmit="return false">
                 <div class="form-group">
                     <div>
-                        <textarea name="prompt" class="form-control" style="resize: none;"></textarea>
+                        <input type="text" name="prompt" class="form-control"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <div>
                         <div class="btn-toolbar">
-                            <button name="submit" type="button" class="btn btn-primary">发送</button>
+                            <button name="submit" type="submit" class="btn btn-primary">发送</button>
                             &nbsp; &nbsp;
                             <button name="cancel" type="button" class="btn btn-warning">停止</button>
                             &nbsp; &nbsp;
@@ -112,6 +97,7 @@
                         </div>
                     </div>
                 </div>
+                </form>
             </div><!-- end form-foot -->
             </div><!-- end panel -->
         </div>
