--- a/hongs-magpie-web/web/centre/data/magpie/assistant/talk.html
+++ b/hongs-magpie-web/web/centre/data/magpie/assistant/talk.html
@@ -1,12 +1,13 @@
 <div id="centre-data-magpie-assistant-talk" class="centre-data-magpie-assistant-talk">
     <div class="magpie-msgsbox">
         <div class="rollbox panel panel-default">
-        <div class="form-body msgs-list">
+        <div class="form-body">
+            <div class="msgs-list"></div>
         </div><!-- end form-body -->
         </div><!-- end panel -->
         <div class="panel panel-default">
         <div class="form-foot">
-            <form onsubmit="return false">
+        <form onsubmit="return false">
             <div class="form-group">
                 <div>
                     <input type="text" name="prompt" class="form-control"/>
@@ -23,9 +24,10 @@
                     </div>
                 </div>
             </div>
-            </form>
+        </form>
         </div><!-- end form-foot -->
         </div><!-- end panel -->
+        <div style="height: 1px;"></div>
     </div>
 </div>
 <script type="text/javascript">
